[package]
authors = ["Holger Rapp <HolgerRapp@gmx.net>"]
description = "A rust library and command line tool to read encrypted Vim files."
documentation = "https://docs.rs/vimdecrypt"
exclude = [".gitignore", ".travis.yml", "watcher.lua"]
homepage = "https://github.com/SirVer/vimdecrypt-rs"
keywords = ["vim", "vimcrypt", "vimdecrypt", "decrypt", "crypt"]
license = "MIT"
name = "vimdecrypt"
readme = "README.md"
repository = "https://github.com/SirVer/vimdecrypt-rs"
version = "0.2.0"
edition = "2018"

[dependencies]
blowfish = "0.5.0"
clap = { version = "3.2.17", features = ["derive"] }
generic-array = "0.14.6"
rpassword = "7.0.0"
sha2 = "0.10.2"
thiserror = "1.0.32"
byteorder = "1.4.3"
